compiler/testData/diagnostics/tests/SyntaxErrorInTestHighlightingEof.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
fun f() {<!SYNTAX!><!>
